test/libsolidity/syntaxTests/types/address/address_to_contract_implicitly.sol
contract C {
  function f() public view {
    C c = address('lat1qqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqz8stlfs');
  }
}
// ----
// TypeError 9574: (46-62): Type address payable is not implicitly convertible to expected type contract C.
